# open-jsw

./: .gitignore  .mise.toml  README.md  cargo.toml  index.html  map.json  rust-toolchain.toml
jsw_binary_lib/: Cargo.toml
jsw_tool/: Cargo.toml
jsw_tool/src/: main.rs
jsw_tool/src/logging/: formats.rs
resources/mm/game/: mm.json
rust/: cargo.toml  rust-toolchain.toml
rust/apps/jsw_tool/: Cargo.toml
rust/apps/jsw_tool/src/: cli.rs  error.rs  logging.rs  main.rs
rust/apps/jsw_tool/src/cli/: validation.rs
rust/apps/jsw_tool/src/logging/: formats.rs
rust/apps/open_jsw/: Cargo.toml
rust/apps/open_jsw/src/: main.rs
rust/crates/jsw_tool/: Cargo.toml
rust/crates/jsw_tool/src/: cli.rs  main.rs
rust/crates/libs/open_jsw_core/: Cargo.toml
rust/crates/libs/open_jsw_core/src/: converter.rs  error.rs  game.rs  lib.rs  raw_game.rs
rust/crates/libs/open_jsw_core/src/converter/: jsw_raw.rs  jsw_signatures.rs  raw_parsers.rs
rust/crates/libs/open_jsw_core/src/converter/raw_parsers/: jsw2_raw_parser.rs  jsw_raw_parser.rs  mm_raw_parser.rs
rust/crates/libs/open_jsw_core/src/raw_game/: raw_game_identifier.rs  raw_parser.rs
rust/crates/libs/open_jsw_core/src/raw_game/raw_parser/: mm_parser.rs
rust/jsw_binary_lib/: Cargo.toml
rust/jsw_binary_lib/src/: converter.rs  lib.rs
rust/jsw_binary_lib/src/converter/: converter_utils.rs  jsw2_raw_parser.rs  jsw_raw.rs  jsw_raw_parser.rs  jsw_signatures.rs  mm_raw_parser.rs
rust/jsw_tool/: Cargo.toml
rust/jsw_tool/src/: cli.rs  logging.rs  main.rs
rust/jsw_tool/src/cli/: validation.rs
rust/libs/open_jsw_core/: Cargo.toml
rust/libs/open_jsw_core/src/: converter.rs  error.rs  game.rs  image.rs  lib.rs  raw_game.rs
rust/libs/open_jsw_core/src/converter/: raw_to_tiled_converter.rs
rust/libs/open_jsw_core/src/raw_game/: raw_game_identifier.rs  raw_parser.rs
rust/libs/open_jsw_core/src/raw_game/raw_parser/: jsw2_parser.rs  jsw_parser.rs  mm_parser.rs
rust/libs/open_jsw_core/src/zx/: colours.rs
rust/libs/open_jsw_tiled/: Cargo.toml
rust/libs/open_jsw_tiled/src/: error.rs  lib.rs  tiled.rs
rust/libs/open_jsw_tiled/src/tiled/: axis.rs  chunk.rs  layer.rs  layer_data.rs  map.rs  object.rs  object_template.rs  point.rs  property.rs  text.rs  tileset.rs  validation.rs
rust/libs/rust_utils/: Cargo.toml
rust/libs/rust_utils/src/: matrix.rs  vec.rs
tiled/: open-jsw.tiled-session  open_jsw.json  out.json
xtask/: Cargo.toml
xtask/src/: cli.rs  commands.rs  error.rs  file_utils.rs  main.rs  project.rs
xtask/src/cli/: validation.rs
