[package]
name = "jsw_tool"
description = "JSW Tool"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
open_jsw_core = { workspace = true }
open_jsw_tiled = { workspace = true }
thiserror = { workspace = true }
# derive_more = { workspace = true, features = ["from"] }
flexi_logger = { workspace = true, features = ["colors"] }
log = { workspace = true }
clap = { workspace = true, features = ["derive"] }
image = { workspace = true, features = ["png"] }
