[package]
name = "open_jsw"
description = "Open JSW"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# thiserror = { workspace = true }
# derive_more = { workspace = true, features = ["from"] }
macroquad.workspace = true
macroquad-profiler.workspace = true


# sapp-jsutils
#
# Tools to get data in and out of WASM.
#
# https://github.com/not-fl3/sapp-jsutils/tree/master
# https://github.com/not-fl3/miniquad-js-interop-demo
