[package]
name = "jsw_tool"
version.workspace = true
edition.workspace = true

[dependencies]
open_jsw_core = { workspace = true }
thiserror = { workspace = true }
# derive_more = { workspace = true, features = ["from"] }
flexi_logger = { workspace = true, features = ["colors"] }
log = { workspace = true }
clap = { workspace = true, features = ["derive"] }
