[package]
name = "open_jsw_core"
description = "Open JSW Core"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
bytebuffer = { workspace = true }
# derive_more = { workspace = true, features = ["from", "display"] }
# byteorder = { workspace = true }
log = { workspace = true }
# thiserror = { workspace = true }
