[package]
name = "open_jsw_tiled"
description = "Open JSW Tiled Library"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
nanoserde = { workspace = true, default-features = false, features = [
  "std",
  "json",
] }
# bytebuffer = { workspace = true }
# derive_more = { workspace = true, features = ["from", "display"] }
# byteorder = { workspace = true }
# log = { workspace = true }
